--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,13 +25,15 @@ layout: default
 {{ content }}
 </section>
 <section class="meta">
-
 <span class="author">
-  <a href="{{ site.url }}">{{ site.author }}</a>
+  <a href="https://github.com/xiaojunsun">{{ site.author }}</a>
 </span>
 <span class="time">
   /
   <time datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date:"%Y-%m-%d" }}</time>
+</span>
+<span class="license">
+  Published under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(CC) BY-NC-SA</a>
 </span>
 <br/>
 <br/>
