--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  background-color: #f8f1e3;
 }
 
 body {
@@ -26,7 +27,8 @@ a {
 }
 
 code {
-  background-color: rgba(0, 0, 0, 0.02);
+  background-color: #FCFCFC;
+  font-family: consolas, courier, monospace
 }
 
 .wrapper {
@@ -35,9 +37,9 @@ code {
 }
 
 .header {
-  padding: 20px 0;
+  padding: 25px 0;
   position: relative;
-  background: #f5f5f5;
+  background: #f2efe6;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -68,7 +70,7 @@ code {
 .nav-links {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 18px;
   list-style: none;
 }
 
@@ -91,10 +93,10 @@ code {
 }
 
 .content {
-  max-width: 700px;
+  max-width: 860px;
   margin: 40px auto 10px;
   padding: 0 15px;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.7;
   color: #333;
 }
@@ -107,6 +109,10 @@ code {
 }
 
 .article-date {
+  color: #ccc;
+}
+
+.article-author {
   color: #ccc;
 }
 
@@ -128,15 +134,15 @@ code {
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 3px solid #CBF8DF;
-  box-shadow: inset 0 -4px 0 #CBF8DF;
+  border-bottom: 1px solid #C7FFEC;
+  box-shadow: inset 0 -3px 0 #C7FFEC;
   background: transparent;
   transition: background 150ms ease;
 }
 
 .article-content a:hover,
 .article-content a:focus {
-  background: #CBF8DF;
+  background: #C7FFEC;
 }
 
 .article-content hr {
@@ -207,10 +213,11 @@ code {
 
 .footer-links {
   list-style: none;
-  margin: 0;
+  margin: 60px 60px 60px;
   padding: 0;
-  color: #ccc;
+  color: #4a4a4a;
   font-size: 14px;
+  text-align: center;
 }
 
 .footer-links li {
@@ -223,7 +230,7 @@ code {
   color: #888;
   text-decoration: none;
   transition: color 150ms ease;
-  margin: 0 15px;
+  margin: 0 0px;
 }
 
 .footer-links a:hover,
@@ -259,17 +266,8 @@ code {
     max-height: 50px;
   }
 
-  .nav-links {
-    font-size: 18px;
-  }
-
   .nav-links li {
     margin: 0 0 0 30px;
-  }
-
-  .content {
-    font-size: 19px;
-    line-height: 1.8;
   }
 
   .highlight {
@@ -304,10 +302,6 @@ code {
 
   .article-duration {
     font-size: 12px;
-  }
-
-  .footer-links {
-    font-size: inherit;
   }
 }
 
