--- a/themes/hugo-lithium/layouts/partials/head.html
+++ b/themes/hugo-lithium/layouts/partials/head.html
@@ -1,7 +1,6 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
 {{ .Hugo.Generator }}
-
 {{ if eq .URL "/" }}
 <title>{{ .Site.Title }}</title>
 <meta property="og:title" content="{{ .Site.Title }}">
