--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -139,15 +139,15 @@ code {
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 1px solid #C7FFEC;
-  box-shadow: inset 0 -3px 0 #C7FFEC;
+  border-bottom: 1px solid #F79383;
+  box-shadow: inset 0 -3px 0 #F79383;
   background: transparent;
   transition: background 150ms ease;
 }
 
 .article-content a:hover,
 .article-content a:focus {
-  background: #C7FFEC;
+  background: #F79383;
 }
 
 .article-content hr {
