--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  background-color: #f8f1e3;
+  background-color: #fcfcfc;
 }
 
 body {
@@ -44,7 +44,7 @@ code {
 .header {
   padding: 25px 0;
   position: relative;
-  background: #f2efe6;
+  background: #ddc4111f;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -139,15 +139,15 @@ code {
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 1px solid #F79383;
-  box-shadow: inset 0 -3px 0 #F79383;
+  border-bottom: 1px solid #dfd;
+  box-shadow: inset 0 -3px 0 #dfd;
   background: transparent;
   transition: background 150ms ease;
 }
 
 .article-content a:hover,
 .article-content a:focus {
-  background: #F79383;
+  background: #dfd;
 }
 
 .article-content hr {
