--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -44,7 +44,7 @@ code {
 .header {
   padding: 25px 0;
   position: relative;
-  background: #ddc4111f;
+  background: #d7d7d7;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -90,7 +90,7 @@ code {
 
 .nav-links a {
   text-decoration: none;
-  color: #111;
+  color: #ffffff;
 }
 
 .nav-links a:hover {
