--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -31,8 +31,15 @@ blockquote{
   font-size: 90%;
 }
 
+pre {
+  border: 1px solid #ddd;
+  box-shadow: 5px 5px 5px #eee;
+  padding: 0.5em;
+  overflow-x: auto;
+}
+
 code {
-  background-color: #FCFCFC;
+  background-color: #ffffff;
   font-family: consolas, courier, monospace
 }
 
@@ -44,7 +51,7 @@ code {
 .header {
   padding: 25px 0;
   position: relative;
-  background: #d7d7d7;
+  background: #c65555;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -139,15 +146,15 @@ code {
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 1px solid #dfd;
-  box-shadow: inset 0 -3px 0 #dfd;
+  border-bottom: 1px solid #ddd;
+  box-shadow: inset 0 -2.5px 0 #ddd;
   background: transparent;
   transition: background 150ms ease;
 }
 
 .article-content a:hover,
 .article-content a:focus {
-  background: #dfd;
+  background: #ddd;
 }
 
 .article-content hr {
