--- a/themes/hugo-lithium-2018/static/css/main.css
+++ b/themes/hugo-lithium-2018/static/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  background-color: #fcfcfc;
 }
 
 body {
@@ -25,8 +26,21 @@ a {
   outline: none;
 }
 
+blockquote{
+  font-style: italic;
+  font-size: 90%;
+}
+
+pre {
+  border: 1px solid #ddd;
+  box-shadow: 5px 5px 5px #eee;
+  padding: 0.2em;
+  overflow-x: auto;
+}
+
 code {
-  background-color: rgba(0, 0, 0, 0.02);
+  background-color: #ffffff;
+  font-family: consolas, courier, monospace
 }
 
 .wrapper {
@@ -35,9 +49,9 @@ code {
 }
 
 .header {
-  padding: 20px 0;
+  padding: 25px 0;
   position: relative;
-  background: #f5f5f5;
+  background: #c65555;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -68,7 +82,7 @@ code {
 .nav-links {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 18px;
   list-style: none;
 }
 
@@ -83,7 +97,7 @@ code {
 
 .nav-links a {
   text-decoration: none;
-  color: #111;
+  color: #ffffff;
 }
 
 .nav-links a:hover {
@@ -91,11 +105,11 @@ code {
 }
 
 .content {
-  max-width: 700px;
+  max-width: 860px;
   margin: 40px auto 10px;
   padding: 0 15px;
-  font-size: 16px;
-  line-height: 1.7;
+  font-size: 18px;
+  line-height: 1.5;
   color: #333;
 }
 
@@ -107,6 +121,10 @@ code {
 }
 
 .article-date {
+  color: #ccc;
+}
+
+.article-author {
   color: #ccc;
 }
 
@@ -122,21 +140,21 @@ code {
 }
 
 .article-content p {
-  margin: 15px 0 25px;
+  margin: 10px 0 10px;
 }
 
 .article-content a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 3px solid #CBF8DF;
-  box-shadow: inset 0 -4px 0 #CBF8DF;
+  border-bottom: 1px solid #ddd;
+  box-shadow: inset 0 -2.5px 0 #ddd;
   background: transparent;
   transition: background 150ms ease;
 }
 
 .article-content a:hover,
 .article-content a:focus {
-  background: #CBF8DF;
+  background: #ddd;
 }
 
 .article-content hr {
@@ -200,6 +218,29 @@ code {
   border-bottom-color: #222;
 }
 
+.figure{
+  display: block;
+  height: auto;
+  width: auto;
+  text-align: center;
+}
+
+.figure img{
+  max-width: 100%;
+  display: inline-block;
+}
+
+.caption{
+  text-align: center;
+  font-size: 80%;
+}
+
+.footnotes{
+  font-size: 16px;
+  line-height: 1.5;
+  color: #676565;
+}
+
 .footer {
   padding: 25px 0;
   text-align: center;
@@ -207,10 +248,11 @@ code {
 
 .footer-links {
   list-style: none;
-  margin: 0;
+  margin: 60px 60px 60px;
   padding: 0;
-  color: #ccc;
+  color: #4a4a4a;
   font-size: 14px;
+  text-align: center;
 }
 
 .footer-links li {
@@ -223,7 +265,7 @@ code {
   color: #888;
   text-decoration: none;
   transition: color 150ms ease;
-  margin: 0 15px;
+  margin: 0 0px;
 }
 
 .footer-links a:hover,
@@ -259,17 +301,8 @@ code {
     max-height: 50px;
   }
 
-  .nav-links {
-    font-size: 18px;
-  }
-
   .nav-links li {
     margin: 0 0 0 30px;
-  }
-
-  .content {
-    font-size: 19px;
-    line-height: 1.8;
   }
 
   .highlight {
@@ -282,7 +315,7 @@ code {
   }
 
   .archive-title {
-    font-size: 38px;
+    font-size: 35px;
   }
 
   .archive-item-date {
@@ -299,15 +332,11 @@ code {
   }
 
   .article-title {
-    font-size: 42px;
+    font-size: 40px;
   }
 
   .article-duration {
     font-size: 12px;
-  }
-
-  .footer-links {
-    font-size: inherit;
   }
 }
 
