--- a/themes/hugo-lithium/static/css/main.css
+++ b/themes/hugo-lithium/static/css/main.css
@@ -51,7 +51,7 @@ code {
 .header {
   padding: 25px 0;
   position: relative;
-  background: #c65555;
+  background: #dfdfdf;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -97,7 +97,7 @@ code {
 
 .nav-links a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
 }
 
 .nav-links a:hover {
